# optimizer

./: .gitignore  README.md  diet.mod  pyproject.toml  setup.py
examples/diet_problem/: diet.py
examples/sm_scheduling/: helpers.py  main.py  sm_demo.py
examples/sm_scheduling/sm_input/: sm_rules.py
optimizer/: __init__.py  lp_formulation.py
optimizer/core/: __init__.py  conflict_detection.py  constants.py  constraints.py  data.py  elements.py  exceptions.py  expressions.py  helper_functions.py  linearize.py  optimizer.py  pruning.py  solutions.py
optimizer/formulators/: __init__.py  pulp.py
optimizer/sm_input/: sm_fixed_rules.py  sm_functions.py  sm_globals.py
optimizer/solvers/: __init__.py  base.py  pulp_solver.py  scipy_solver.py
tests/: test_conflict_detection.py  test_constants.py  test_examples.py  test_integration.py  test_linearize.py  test_pruning.py  test_solutions.py  test_solvers.py
