[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "optimizer"
version = "0.2.0"
description = "Symbolic optimization modeling framework with pandas-native data binding, constraint conflict detection, and partial/initial solutions."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Bhargava Ram Kanda", email = "bhargavkanda@gmail.com"},
]
keywords = ["optimization", "linear-programming", "mixed-integer", "sympy", "pulp", "modeling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "sympy>=1.12,<2.0",
]

[project.optional-dependencies]
pulp = ["pulp>=2.7"]
scipy = ["scipy>=1.10"]
all = ["pulp>=2.7", "scipy>=1.10"]
dev = [
    "pytest>=7.0",
    "pulp>=2.7",
    "scipy>=1.10",
]

[project.urls]
Homepage = "https://github.com/bhargavkanda/optimizer"
Issues = "https://github.com/bhargavkanda/optimizer/issues"

[tool.setuptools.packages.find]
include = ["optimizer*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"
